<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_numberguess"
        android:textSize="30sp"
        android:textColor="#333333" />

    <Button
        android:id="@+id/startBtn"
        android:onClick="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:background="@drawable/button_bg"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:text="@string/label_guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/num"
            android:hint="@string/edit_number"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginStart="8dp"
            tools:ignore="Autofill"/>

        <Button
            android:id="@+id/doGuess"
            android:onClick="guess"
            android:text="@string/btn_do_guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:textColor="#FFFFFF"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:id="@+id/status"
        android:text="@string/status_start_info"
        android:textColor="#FF000000"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:text="@string/label_log"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <com.example.project3.Console
        android:id="@+id/console"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"/>
</LinearLayout>
